<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="114dp"
                android:contentDescription="@string/cricket_image"
                app:srcCompat="@drawable/cricketimg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/team_1"
                        android:textColor="@color/colorLightBlue"
                        android:textSize="36sp"
                        app:fontFamily="@font/aclonica" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_margin="20dp"
                            android:background="@android:drawable/editbox_dropdown_light_frame"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/score"
                                android:textColor="#000000"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvScore_team1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_0"
                                android:textColor="#1976D2"
                                android:textSize="65sp" />

                        </RelativeLayout>
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="35dp"
                        android:background="@android:drawable/editbox_dropdown_dark_frame"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/out"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tvOut_team1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/_0"
                            android:textColor="#90CAF9"
                            android:textSize="36sp" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnFour_team1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:background="@color/colorBlue"
                            android:onClick="teamFirst_score"
                            android:text="@string/_4"
                            android:textSize="24sp" />

                        <Button
                            android:id="@+id/btnSix_team1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@color/colorBlue"
                            android:onClick="teamFirst_score"
                            android:text="@string/_6"
                            android:textSize="24sp" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/btnRun_team1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@android:drawable/editbox_background"
                        android:onClick="teamFirst_score"
                        android:text="@string/run"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/btnOut_team1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/colorDarkBlue"
                        android:onClick="teamFirst_score"
                        android:text="@string/player_out"
                        android:textColor="@color/colorWhite"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/team_2"
                        android:textColor="#E91E63"
                        android:textSize="36sp"
                        app:fontFamily="@font/aclonica" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_margin="20dp"
                            android:background="@android:drawable/editbox_dropdown_light_frame"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/score"
                                android:textColor="#000000"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvScore_team2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_0"
                                android:textColor="@color/colorAccent"
                                android:textSize="65sp" />

                        </RelativeLayout>
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="35dp"
                        android:background="@android:drawable/editbox_dropdown_dark_frame"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/out"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tvOut_team2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/_0"
                            android:textColor="@color/colorAccent"
                            android:textSize="36sp" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnFour_team2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"

                            android:layout_weight="1"
                            android:background="@color/colorAccent"
                            android:onClick="teamSecond_score"
                            android:text="@string/_4"
                            android:textSize="24sp" />

                        <Button
                            android:id="@+id/btnSix_team2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@color/colorAccent"
                            android:onClick="teamSecond_score"
                            android:text="@string/_6"
                            android:textSize="24sp" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/btnRun_team2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@android:drawable/editbox_background"
                        android:onClick="teamSecond_score"
                        android:text="@string/run"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/btnOut_team2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/colorDarkPink"
                        android:onClick="teamSecond_score"
                        android:text="@string/player_out"
                        android:textColor="@color/colorWhite"
                        android:textSize="24sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnReset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/resetbtn_gradient"
                    android:text="@string/reset_scores"
                    android:textColor="#000000"
                    android:textSize="25sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>